# steuerberater-copilot

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: steuerberater-copilot.mdc
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
docs/00-project/: glossary.md  project-brief.md
docs/10-mvp-scope/: README.md  (+4 more)
tests/: test_contradiction_detector.py  test_document_freshness.py  test_evaluation_case.py  test_evaluation_case_assessment.py  test_evaluation_metrics_report.py  test_fake_model_provider.py  test_fastapi_application.py  test_fastapi_demo_app.py  test_grounded_draft.py  test_grounded_draft_parser.py  test_grounded_draft_validator.py  test_grounding_evaluation_assessment.py  test_grounding_evaluation_case.py  test_grounding_evaluation_metrics_report.py  test_local_document_retriever.py  test_model_invocation.py  test_model_invocation_policy.py  test_model_provider.py  test_observability_runtime.py  test_offline_evaluation_runner.py  test_offline_mvp_cli.py  test_offline_mvp_fixture_contract.py  test_offline_mvp_review_handoff.py  test_offline_mvp_review_summary.py  test_offline_mvp_review_worklist.py  test_offline_mvp_serialization.py  test_offline_mvp_workflow.py  test_openai_responses_provider.py  test_policy_claim_check.py  test_portfolio_evaluation_baseline.py  test_privacy_gateway.py  test_rag_abstention_evaluation_assessment.py  test_rag_abstention_evaluation_case.py  test_rag_abstention_evaluation_metrics_report.py  test_rag_abstention_evaluation_runner.py  test_rag_contradiction_evaluation_assessment.py  test_rag_contradiction_evaluation_case.py  test_rag_contradiction_evaluation_metrics_report.py  test_rag_contradiction_evaluation_runner.py  test_rag_freshness_evaluation_assessment.py  (+23 more)
tools/: openai_provider_smoke_test.py  policy_claim_check.py
(+97 files in other folders)
