[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "steuerberater-copilot"
version = "0.1.0"
description = "Compliance-first offline MVP skeleton for Steuerberater-Copilot."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Steuerberater-Copilot contributors" },
]
dependencies = [
  "openai==2.45.0",
]

[project.scripts]
steuerberater-copilot-offline-mvp = "steuerberater_copilot.offline_mvp.__main__:main"
steuerberater-copilot-evaluate = "steuerberater_copilot.evaluation.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "fastapi", "httpx", "uvicorn"]
api = ["fastapi", "uvicorn"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
